--- a/components/common/I18nWidget/I18nWidget.module.css
+++ b/components/common/I18nWidget/I18nWidget.module.css
@@ -15,7 +15,7 @@
 }
 
 .dropdownMenu {
-  @apply fixed right-0 top-12 mt-2 origin-top-right outline-none bg-primary z-40 w-full h-full;
+  @apply fixed right-0 top-12 mt-2 origin-top-right outline-none bg-white z-40 w-full h-full;
 
   @screen lg {
     @apply absolute border border-accents-1 shadow-lg w-56 h-auto;
