--- a/components/common/UserNav/DropdownMenu.module.css
+++ b/components/common/UserNav/DropdownMenu.module.css
@@ -1,5 +1,5 @@
 .dropdownMenu {
-  @apply fixed right-0 mt-2 origin-top-right outline-none bg-primary z-40 w-full h-full;
+  @apply fixed right-0 mt-2 origin-top-right outline-none bg-white z-40 w-full h-full;
 
   @screen lg {
     @apply absolute top-10 border border-accents-1 shadow-lg w-56 h-auto;
