--- a/components/common/Footer/Footer.module.css
+++ b/components/common/Footer/Footer.module.css
@@ -3,10 +3,10 @@
 }
 .link {
   & > svg {
-    @apply transform duration-75 ease-linear;
+    @apply transform duration-75 ease-linear text-black;
   }
 
   &:hover > svg {
     @apply scale-110;
-  }
+  }  
 }
