--- a/components/common/Navbar/Navbar.module.css
+++ b/components/common/Navbar/Navbar.module.css
@@ -1,5 +1,6 @@
 .root {
-  @apply sticky top-0 z-40 transition-all duration-150;
+  @apply fixed top-0 z-40 transition-all duration-150 bg-white opacity-75;
+  width: 100%;
 }
 
 .link {
