--- a/components/common/UserNav/UserNav.module.css
+++ b/components/common/UserNav/UserNav.module.css
@@ -24,7 +24,7 @@
 }
 
 .bagCount {
-  @apply border border-accents-1 bg-secondary text-secondary h-4 w-4 absolute rounded-full right-3 top-3 flex items-center justify-center font-bold text-xs;
+  @apply border border-accents-1 bg-secondary text-white h-4 w-4 absolute rounded-full right-3 top-3 flex items-center justify-center font-bold text-xs;
 }
 
 .avatarButton {
