--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -16,7 +16,7 @@
     & .productTitle > span,
     & .productPrice,
     & .wishlistButton {
-      @apply bg-secondary text-secondary;
+      @apply bg-secondary text-white;
     }
 
     &:nth-child(6n + 1) .productTitle > span,
